<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/recipes">

    <fragment
        android:id="@+id/recipes"
        android:name="ru.satanachrist94.myrecipes.activity.StartFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_recipes_to_newRecipeFragment"
            app:destination="@id/newRecipeFragment" />
        <action
            android:id="@+id/action_recipes_to_recipeFragment"
            app:destination="@id/recipeFragment"
             />
    </fragment>

    <fragment
        android:id="@+id/favorites"
        android:name="ru.satanachrist94.myrecipes.activity.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_favorites_to_recipeFragment"
            app:destination="@id/recipeFragment" />
    </fragment>
    <fragment
        android:id="@+id/newRecipeFragment"
        android:name="ru.satanachrist94.myrecipes.activity.NewRecipeFragment"
        android:label="@string/recipe" >
        <action
            android:id="@+id/action_newRecipeFragment_to_newStepFragment"
            app:destination="@id/newStepFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeFragment"
        android:name="ru.satanachrist94.myrecipes.activity.RecipeFragment"
        android:label="@string/recipe" >
        <action
            android:id="@+id/action_recipeFragment_to_newRecipeFragment"
            app:destination="@id/newRecipeFragment" />
    </fragment>
    <fragment
        android:id="@+id/newStepFragment"
        android:name="ru.satanachrist94.myrecipes.activity.NewStepFragment"
        android:label="@string/new_step"
        tools:layout="@layout/fragment_new_step" />

</navigation>