<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StartFragment">




    <ImageView
        android:id="@+id/floppa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/floppa"
        android:visibility="invisible"
        >

    </ImageView>



    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_group"
        android:visibility="gone"
        app:constraint_referenced_ids="search, search_clear, search_button"
        tools:visibility="visible"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/search_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="search, search_button, search_clear"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search"
        android:inputType="textImeMultiLine"
        android:background="@android:color/transparent"
        android:hint="@string/searching_by_recipe_tittles"
        android:layout_marginStart="16dp"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search_barrier"
        />

    <ImageView
        android:id="@+id/search_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancel_24"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        app:layout_constraintStart_toEndOf="@id/search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search_barrier"
        tools:visibility="visible"
        />

    <Button
        android:id="@+id/search_button"
        android:text="@string/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/search_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search_barrier"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_chips_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:selectionRequired="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        tools:visibility="visible">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEuropean"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/european"
            app:chipIcon="@drawable/ic_check_24"
            android:checked="true"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/orange"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAsian"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asian"
            app:chipIcon="@drawable/ic_check_24"
            android:checked="true"
            app:chipBackgroundColor="@color/orange"

            app:checkedIconVisible="true"
             />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPanAsiatic"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pan_asiatic"
            app:chipIcon="@drawable/ic_check_24"
            android:checked="true"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/orange"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEastern"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eastern"
            app:chipIcon="@drawable/ic_check_24"
            android:checked="true"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/orange"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAmerican"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/american"
            app:chipIcon="@drawable/ic_check_24"
            android:checked="true"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/orange"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipRussian"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            app:chipIcon="@drawable/ic_check_24"
            android:checked="true"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/orange"
         />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMediterranean"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediterranean"
            app:chipIcon="@drawable/ic_check_24"
            android:checked="true"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/orange"
            />

    </com.google.android.material.chip.ChipGroup>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="filter_chips_group, search"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:listitem="@layout/recipe" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_recipe_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/green"
        app:srcCompat="@drawable/ic_baseline_library_add_48" />




</androidx.constraintlayout.widget.ConstraintLayout>